# Track-Tracker-Backend

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/db/: __init__.py  database.py  init.py  models.py
app/ingestion/: __init__.py
app/ingestion/spotify/: __init__.py  data_classes.py  spotipy_handler.py
app/ingestion/tiktok/: __init__.py  attempt.py  data_classes.py  exceptions.py
