[project]
name = "track-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.27",
    "fastapi>=0.128.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "spotipy>=2.25.2",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
